# laykit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  book.toml
.github/scripts/: release-version.sh
.github/workflows/: ci.yml  release.yml
book/src/: SUMMARY.md  api-reference.md  aref-expansion.md  boolean-ops.md  cli-tool.md  contributing.md  conversion.md  examples-basic.md  examples-elements.md  examples-hierarchical.md  flexpath.md  gdsii-to-oasis.md  geometry.md  installation.md  introduction.md  oasis-elements.md  oasis-reading.md  oasis-to-gdsii.md  oasis-writing.md  performance.md  project-structure.md  properties.md  quick-start.md  roadmap.md  streaming.md  summary.md  technical-details.md  testing.md  topology.md  unified-io.md
book/theme/: custom.css  custom.js
docs/: PARITY.md
examples/: basic_usage.rs  gdsii_only.rs  oasis_only.rs  unified_load.rs
src/: aref_expansion.rs  boolean_ops.rs  clipper_polytree.rs  converter.rs  curve.rs  error.rs  flexpath.rs  format_detection.rs  gdsii.rs  geom_cli.rs  geometry.rs  layout.rs  lib.rs  library.rs  oasis.rs  streaming.rs  topology.rs
tests/: README.md  README_VALIDATION.md  converter_tests.rs  gdsii_tests.rs  gdstk_parity_report.py  gdstk_validation.py  oasis_tests.rs  pyproject.toml  run_all_tests.sh  tests.rs
