[package]
name = "laykit"
version = "0.2.7"
edition = "2021"
authors = ["Giridhar Salana <giridharsalana@gmail.com>"]
description = "laykit - Production-ready Rust library for GDSII and OASIS IC layout file formats"
readme = "README.md"
repository = "https://github.com/giridharsalana/laykit"
license = "MIT"
keywords = ["gdsii", "oasis", "ic-layout", "vlsi", "eda"]
categories = ["parser-implementations", "encoding"]

[dependencies]

[dev-dependencies]

[lib]
name = "laykit"
path = "src/lib.rs"

[[example]]
name = "gdsii_only"
path = "examples/gdsii_only.rs"

[[example]]
name = "oasis_only"
path = "examples/oasis_only.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
