[package]
name = "laykit"
version = "0.0.2"
edition = "2024"
authors = ["Giridhar Salana <giridharsalana@gmail.com>"]
description = "Production-ready Rust library for reading, writing, and manipulating GDSII and OASIS IC layout files"
readme = "README.md"
repository = "https://github.com/giridharsalana/laykit"
documentation = "https://giridharsalana.github.io/laykit"
homepage = "https://giridharsalana.github.io/laykit"
license = "MIT"
keywords = ["gdsii", "oasis", "ic-layout", "vlsi", "eda"]
categories = ["parser-implementations", "encoding"]

[dependencies]

[dev-dependencies]

[lib]
name = "laykit"
path = "src/lib.rs"

[[bin]]
name = "laykit"
path = "src/bin/laykit.rs"

[[example]]
name = "gdsii_only"
path = "examples/gdsii_only.rs"

[[example]]
name = "oasis_only"
path = "examples/oasis_only.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
